--- a/hw_06/index.html
+++ b/hw_06/index.html
@@ -8,8 +8,22 @@
     <style>
         body{
             background: rgba(0, 0, 0, 0.8);
+            font-family: Arial, Helvetica, sans-serif;
+
+            display: grid;
+            grid-gap: 20px;
+            grid-template-columns: repeat(4, 1fr);
         }
-        button{
+
+        .container{
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            color: #fff;
+        }
+
+        .calculator-btn{
             padding: 18px;
             font-size: 19px;
             cursor: pointer;
@@ -20,7 +34,7 @@
             margin-bottom: 15px;
             transition: .5s;
         }
-        button:hover{
+        .calculator-btn:hover{
             background: rgba(221, 160, 221, .4);
         }
         #table{
@@ -29,9 +43,10 @@
     </style>
 </head>
 <body>
-    <button onclick="calculator()">Запустить калькулятор</button>
+    <div>
+    <button onclick="calculator()" class="calculator-btn">Запустить калькулятор</button>
+    </div>
 
-    <div id="table"> </div>
 
     <script src="./script.js"></script>
 </body>
